--- a/style/style.css
+++ b/style/style.css
@@ -17,12 +17,13 @@
     --color-padrao:#DEDFE1;
     /* fonte */
     --font-padrao:'Poppins',Arial,Helvetica,Sans-serif;
+    --text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.678);
 }
 
 body{
     color: var(--color-padrao);
     font-family: var(--font-padrao);
-    background: url(../assets/images/Bg-Image01.jpg) center/cover no-repeat;
+    background: url(../assets/images/Bg-Image01.jpg) right/cover no-repeat;
     background-attachment: fixed;
     
 }
@@ -101,6 +102,8 @@ body{
 .name{
     font-size: 1.8em;
     padding: 20px;
+    text-shadow: var(--text-shadow);
+    
 }
 
 .btns{
@@ -171,6 +174,9 @@ body{
 
 .title{
     font-size: 2.5rem;
+    text-shadow: var(--text-shadow);
+    border-bottom: 4px solid #f1f1f1;
+    width: max-content;
 }
 
 .text{
@@ -178,6 +184,8 @@ body{
     max-width: 300px;
     min-width: 300px;
     padding-left: 1rem;
+    text-shadow: var(--text-shadow);
+
 }
 
 .photo{
@@ -206,11 +214,13 @@ body{
         justify-content: right;
         padding:10px 2rem;
         font-size: 18px;
+        
     }
 
     .nav-links a{
         color: #f1f1f1;
         border-bottom:2px solid;
+        text-shadow: var(--text-shadow);
     }
 
     .fa-brands{
@@ -237,6 +247,29 @@ body{
 
     #rodape .icons{
         padding-left: 5rem;
+    }
+
+    .photo{
+        position: absolute;
+        width: 300px;
+        right: 10%;
+        bottom: 0;
+    }
+
+    .about{
+        width: 40vw;
+    }
+
+    .about h1{
+        font-size: 4rem;
+    }
+
+    .about-text{
+        font-size: 1.2rem;
+    }
+
+    .text{
+        max-width: 400px;
     }
 }
 
